--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,10 +6,8 @@
 $(function () {
   $(".js-more").on('click', function() {
     var id = $(this).data("id");
-    // change the URL to the new route
-    $.get("/posts/" + id + "/post_data", function(data) {
-      // Replace text of body-id div
-      $("#body-" + id).text(data);
+    $.get("/posts/" + id + "/post_data", function(response) {
+      $("#body-" + id).html(data["description"]);
     });
   });
 });
